# smg

./: .pre-commit-config.yaml  Cargo.toml
.github/: CODEOWNERS
.github/workflows/: _build-engine-image.yml  e2e-gpu-job.yml  nightly-bfcl.yml  nightly-docker.yml  nightly-engine-docker.yml  pr-test-mlx.yml  pr-test-rust.yml  release-sglang-docker.yml  release-trtllm-docker.yml  release-vllm-docker.yml
bindings/golang/: Cargo.toml
bindings/python/: Cargo.toml  pyproject.toml
crates/auth/: Cargo.toml
crates/data_connector/: Cargo.toml
crates/grpc_client/: Cargo.toml
crates/kv_index/: Cargo.toml
crates/mcp/: Cargo.toml
crates/mesh/: Cargo.toml
crates/mock_worker/: README.md
crates/protocols/: Cargo.toml
crates/protocols/src/: worker.rs
crates/reasoning_parser/: Cargo.toml
crates/tokenizer/: Cargo.toml
crates/tool_parser/: Cargo.toml
crates/wasm/: Cargo.toml
crates/workflow/: Cargo.toml
docs/getting-started/: kv-events-cache-aware.md
docs/reference/: metrics.md
e2e_test/chat_completions/: test_enable_thinking.py  test_function_calling.py  test_openai_server.py  test_structured_output.py  test_validation.py
e2e_test/completions/: test_basic.py
e2e_test/fixtures/: hooks.py
e2e_test/infra/: constants.py  model_specs.py  worker.py
e2e_test/responses/: test_background_mode.py  test_sampling_params.py  test_state_management.py  test_streaming_events.py  (+2 more)
grpc_servicer/: pyproject.toml
model_gateway/: Cargo.toml
scripts/: ci_install_sglang.sh  ci_install_tokenspeed.sh  ci_install_trtllm.sh  ci_install_vllm.sh  sim_ab.sh  sim_load.py
(+114 files in other folders)
