[package]
name = "openai-protocol"
version = "1.8.0"
edition = "2021"
description = "OpenAI-compatible API protocol definitions and types"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
    "Keyang Ru <rukeyang@gmail.com>",
]
keywords = ["openai", "llm", "api", "protocol", "types"]
categories = ["api-bindings", "data-structures"]

[features]
default = []
axum = ["dep:axum", "axum/multipart"]

[dependencies]
axum = { workspace = true, optional = true }
bitflags.workspace = true
bytes = "1.8.0"
chrono.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true
schemars.workspace = true
# Only used by protocols
url = "2.5"
validator = { version = "0.20.0", features = ["derive"] }

[lints]
workspace = true
